--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   overflow: hidden;
   flex-shrink: 0;
-  background-color: var(--white);
+  background-color: var(--bg-primary);
 
   img {
     width: 100%;
