--- a/components/atoms/signInButton/signInButton.module.scss
+++ b/components/atoms/signInButton/signInButton.module.scss
@@ -7,7 +7,7 @@
   color: rgb(255, 255, 255);
   font-weight: 500;
   border: none;
-  transition: box-shadow var(--transition-fast);
+  transition: box-shadow var(--transition);
   text-align: center;
   font-size: 1.5rem;
   margin-left: 3rem;
