--- a/components/molecules/navbar/navbar.module.scss
+++ b/components/molecules/navbar/navbar.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   padding: 0.2rem 0;
   border-top: var(--border-gray);
-  background-color: var(--white);
+  background-color: var(--bg-primary);
   position: fixed;
   bottom: 0;
   left: 0;
