--- a/components/molecules/postSlider/postSlider.module.scss
+++ b/components/molecules/postSlider/postSlider.module.scss
@@ -105,7 +105,7 @@
   z-index: 2;
   list-style-type: none;
   padding: 0.35rem 0.5rem;
-  background-color: var(--white);
+  background-color: var(--bg-primary);
   border-radius: var(--radius-small);
   box-shadow: var(--shadow-secondary);
 }
