--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -42,7 +42,7 @@
     justify-content: flex-start;
     gap: 0.75rem;
 
-    transition: var(--transition-fast);
+    transition: var(--transition);
   }
 
   &:hover,
@@ -58,7 +58,7 @@
   text-align: left;
   padding-right: 1rem;
 
-  
+
 }
 
 .name {
@@ -75,7 +75,7 @@
   margin-left: auto;
 }
 
-.username{
+.username {
   max-width: 8rem;
   overflow: hidden;
   text-overflow: ellipsis;
