--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -34,7 +34,7 @@
 
 .button-secondary {
   @extend .button;
-  background-color: var(--white);
+  background-color: var(--bg-primary);
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
