--- a/components/atoms/dropZone/dropZone.module.scss
+++ b/components/atoms/dropZone/dropZone.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
-  transition: var(--transition-fast);
+  transition: var(--transition);
   gap: 1rem;
   padding: 2rem 0;
 
@@ -49,13 +49,14 @@
   color: var(--color-error);
 }
 
+
 .buttonInput {
   border-radius: var(--radius-medium);
   background-color: var(--color-primary);
   color: rgb(255, 255, 255);
   font-weight: 500;
   border: none;
-  transition: all var(--transition-fast);
+  transition: all var(--transition);
   z-index: 1;
   pointer-events: all;
   padding: 0.35rem 0.7rem;
@@ -64,18 +65,17 @@
     text-transform: uppercase;
   }
 
-  &:focus {
-    outline: none;
-  }
-
   &:hover {
     cursor: pointer;
     transform: scale(1.05);
   }
 }
 
+.input:focus~.buttonInput {
+  box-shadow: var(--shadow-focus);
+}
+
 .buttonInputDisabled {
-  background-color: var(--color-disabled);
-  opacity: 0.7;
+  opacity: 0.5;
   pointer-events: none;
 }
