--- a/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
+++ b/components/molecules/aspectRatioButtons/aspectRatioButtons.module.scss
@@ -15,6 +15,7 @@
 }
 
 .button {
+  width: 100%;
 
   &:last-child {
     grid-column: 1 / 3;
@@ -27,4 +28,10 @@
       grid-column: auto;
     }
   }
+}
+
+.container {
+  display: flex;
+  justify-content: stretch;
+  align-items: center;
 }
