--- a/components/molecules/listModal/listModal.module.scss
+++ b/components/molecules/listModal/listModal.module.scss
@@ -40,7 +40,7 @@
 
     &:hover,
     &:focus {
-      background-color: var(--bg-primary);
+      background-color: var(--color-gray);
     }
   }
 }
