--- a/components/molecules/statsModal/statsModal.module.scss
+++ b/components/molecules/statsModal/statsModal.module.scss
@@ -26,7 +26,7 @@
 
 .placeholder {
     margin: 0 2rem;
-    background-size: 500%;
+    background-size: --placeholder-bg-size;
     background-image: var(--gradient);
     animation: var(--placeholder-animation);
     height: 2.5rem;
@@ -38,13 +38,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1rem;
     transition: transform var(--transition);
     padding: 0 2rem;
-
-    @include common.mediaquery('desktop') {
-        gap: 5rem;
-    }
 }
 
 .itemLink {
