--- a/components/pages/editAccount/editAccount.module.scss
+++ b/components/pages/editAccount/editAccount.module.scss
@@ -5,20 +5,12 @@
   display: flex;
   flex-direction: column;
   margin: 2rem auto;
+  margin-bottom: 5rem;
   width: clamp(20rem, 80vw, 50rem);
 
   @include common.mediaquery('desktop') {
     margin: 0 auto;
     margin-top: 3rem;
-  }
-}
-
-.heading {
-  font-size: 2rem;
-  text-align: center;
-
-  @include common.mediaquery('desktop') {
-    text-align: left;
   }
 }
 
