--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,7 +5,7 @@
   --color-secondary: rgb(149, 182, 241);
   --color-error: rgb(207, 60, 30);
   --color-disabled: rgb(63, 114, 175, 0.9);
-  --color-gray: rgb(200, 200, 200);
+  --color-gray: rgb(225, 225, 225);
 
   --color-overlay: rgb(20, 20, 20, 0.6);
 
@@ -24,8 +24,8 @@
   --transition: 0.4s ease;
   --transition-fast: 0.2s ease;
 
-  --gradient: linear-gradient(90deg, #ccc 0px, #ffffff 16%, #ccc 32%);
-  --placeholder-animation: skeleton-loading 1.5s infinite linear;
+  --gradient: linear-gradient(90deg, var(--color-gray) 0px, #ffffff 10%, var(--color-gray) 20%);
+  --placeholder-animation: skeleton-loading 2s infinite linear;
   --placeholder-bg-size: 500%;
 
   --shadow-focus: 0 0 0 0.3rem var(--bg-primary), 0 0 0 0.5rem var(--color-primary);
