feat: scroll lock for some modals

--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -28,7 +28,7 @@
   }
 
   @include common.mediaquery('desktop') {
-    border-radius: var(--radius-small);
+    border-radius: var(--radius-medium);
     padding: 0.5rem 0.9rem;
   }
 }
