--- a/components/organisms/accountPosts/accountPosts.module.scss
+++ b/components/organisms/accountPosts/accountPosts.module.scss
@@ -30,7 +30,7 @@
   border-radius: var(--radius-small);
   min-height: 10rem;
 
-  @include common.mediaquery('desktop') {
-    min-height: 20rem;
+  @include common.mediaquery('tablet') {
+    min-height: 24rem;
   }
 }
