--- a/components/atoms/accountPost/accountPost.module.scss
+++ b/components/atoms/accountPost/accountPost.module.scss
@@ -24,15 +24,7 @@
   object-fit: contain;
 }
 
-.link {
-  display: flex;
 
-  &:focus {
-    &+.overlay {
-      opacity: 1;
-    }
-  }
-}
 
 .overlay {
   position: absolute;
@@ -44,10 +36,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  list-style: none;
   gap: 0.75rem;
   background-color: rgb(35, 35, 35, 0.55);
   color: rgb(255, 255, 255);
   font-weight: 600;
+  opacity: 0;
+
+  transition: opacity var(--transition);
 
   --text-size: 1.5rem;
   font-size: var(--text-size);
@@ -59,7 +55,17 @@
 
   @include common.mediaquery('desktop') {
     gap: 2rem;
-    --text-size: 4rem;
+    --text-size: 3.5rem;
+  }
+}
+
+.container {
+
+  &:focus,
+  &:hover {
+    &>.overlay {
+      opacity: 1;
+    }
   }
 }
 
