--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -88,12 +88,12 @@
   background-color: transparent;
   align-items: center;
 
-  &:last-child {
-    margin-left: auto;
-  }
-
   >svg {
     width: 1.25rem;
     height: 1.25rem;
   }
+}
+
+.buttonLast {
+  margin-left: auto;
 }
