--- a/components/organisms/accountPosts/accountPosts.module.scss
+++ b/components/organisms/accountPosts/accountPosts.module.scss
@@ -17,7 +17,7 @@
   @include common.mediaquery('desktop') {
     gap: 1rem;
     padding: 0 3rem;
-
+    margin-top: 5rem;
     grid-template-columns: repeat(3, 1fr);
   }
 }
