--- a/components/organisms/homePost/homePost.module.scss
+++ b/components/organisms/homePost/homePost.module.scss
@@ -6,6 +6,6 @@
     border: var(--border-gray);
 
     @include common.mediaquery('desktop') {
-        border-radius: var(--radius-medium);
+        border-radius: var(--radius-big);
     }
 }
