--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -12,6 +12,8 @@
     gap: 1rem;
     padding: 0.5rem 1rem;
     background-color: var(--bg-secondary);
+
+    height: 5rem;
 }
 
 .heading {
@@ -25,52 +27,25 @@
     justify-content: flex-start;
     list-style: none;
     padding: 2rem 2rem;
-    gap: 3rem;
-    max-height: 20rem;
+    gap: 2rem;
+    max-height: calc(100vh - 18rem);
     overflow-y: auto;
 
     @include common.mediaquery('desktop') {
-        max-height: 75vh;
-    }
-}
-
-.message {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-left: auto;
-    background-color: var(--color-secondary);
-    padding: 0.6rem 1rem;
-    border-radius: var(--radius-medium);
-    color: rgb(30, 30, 30);
-
-    &>figure {
-        order: 2;
-    }
-}
-
-.loading {
-    padding-bottom: 3rem;
-}
-
-.messageFriend {
-    margin-left: 0;
-    background-color: var(--bg-secondary);
-    color: inherit;
-
-    &>figure {
-        order: 0;
+        max-height: calc(100vh - 15rem);
     }
 }
 
 .form {
     display: flex;
-    align-items: stretch;
+    align-items: center;
     padding: 0.5rem;
-    gap: 2rem;
+    gap: 0.5rem;
     background-color: var(--bg-secondary);
+    height: 5rem;
 
     @include common.mediaquery('desktop') {
+        gap: 2rem;
         padding: 1rem 3rem;
     }
 }
@@ -79,7 +54,7 @@
     flex-grow: 1;
     background-color: var(--bg-primary);
     border-radius: var(--radius-small);
-    padding: 0 0.5rem;
+    padding: 1rem 0.5rem;
     border: none;
 
     &:focus {
@@ -96,6 +71,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 
 
     &:focus {
