--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -7,7 +7,10 @@
     max-height: 100vh;
     padding-bottom: 3rem;
 
+    --width: 100%;
+
     @include common.mediaquery('desktop') {
+        --width: calc(100% - 5vw - var(--header-width));
         padding-bottom: 0;
     }
 }
@@ -17,8 +20,10 @@
     align-items: center;
     gap: 1rem;
     padding: 1rem;
-    background-color: var(--bg-secondary);
-    height: auto;
+    background-color: var(--bg-primary);
+    width: var(--width);
+    position: fixed;
+    top: 5rem;
 }
 
 .heading {
@@ -31,9 +36,8 @@
     align-items: flex-start;
     justify-content: flex-start;
     list-style: none;
-    padding: 2rem 2rem;
+    padding: 10rem 2rem;
     gap: 2rem;
-    overflow-y: auto;
 }
 
 .form {
@@ -41,7 +45,12 @@
     align-items: center;
     padding: 0.5rem;
     gap: 0.5rem;
-    background-color: var(--bg-secondary);
+    background-color: var(--bg-primary);
+    position: fixed;
+
+    padding-bottom: 3.5rem;
+    bottom: 0;
+    width: var(--width);
 
     @include common.mediaquery('desktop') {
         gap: 2rem;
@@ -53,8 +62,8 @@
     flex-grow: 1;
     background-color: var(--bg-primary);
     border-radius: var(--radius-small);
+    border: var(--border-gray);
     padding: 1rem 0.5rem;
-    border: none;
 
     &:focus {
         outline: none;
