feat: change user id's to chat rooms
fix: redirecting on invalid chat room

fix: joining to chat rooms

fix: chat message form

feat: new post notification

fix: infinite scroll

fix: chat users

fix: chat rwd

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,7 +24,7 @@
   --transition: 0.4s ease;
   --transition-fast: 0.2s ease;
 
-  --gradient: linear-gradient(90deg, var(--color-gray) 0px, #ffffff 10%, var(--color-gray) 20%);
+  --gradient: linear-gradient(90deg, var(--color-gray) 0px, #ededed 20%, var(--color-gray) 40%);
   --placeholder-animation: skeleton-loading 2s infinite linear;
   --placeholder-bg-size: 500%;
 
