--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -4,7 +4,7 @@
   width: 2rem;
   height: 2rem;
   border-radius: 100%;
-  box-shadow: 0 0 0 2px var(--color-primary);
+  box-shadow: 0 0 0 1px var(--color-gray);
   display: flex;
   justify-content: center;
   align-items: center;
