--- a/components/atoms/chatMessage/chatMessage.module.scss
+++ b/components/atoms/chatMessage/chatMessage.module.scss
@@ -2,14 +2,31 @@
 
 .message {
     display: flex;
-    gap: 0.25rem;
+    align-items: center;
     margin-left: auto;
     color: rgb(30, 30, 30);
-
+    position: relative;
+    word-break: break-all;
 
     &>button {
         order: 2;
     }
+}
+
+.time {
+    top: -1.1rem;
+    left: unset;
+    right: 1.75rem;
+    position: absolute;
+    font-size: 0.75rem;
+    text-align: right;
+    width: 7rem;
+}
+
+.timeReceiver {
+    right: unset;
+    left: 0.5rem;
+    text-align: left;
 }
 
 .content {
