--- a/components/molecules/chatUsers/chatUsers.module.scss
+++ b/components/molecules/chatUsers/chatUsers.module.scss
@@ -2,20 +2,59 @@
 
 .nav {
     display: flex;
-    flex-direction: row;
-    gap: 2rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 3rem;
     background-color: var(--bg-primary);
     width: var(--width);
+    overflow-y: auto;
     position: fixed;
     top: 0;
-    height: 5rem;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
+    z-index: 1;
+    height: 100%;
+
+    @include common.mediaquery('desktop') {
+        padding: 2rem 4rem;
+    }
 }
 
 .link {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
+    border-radius: var(--radius-medium);
+    background-color: var(--bg-primary);
+    padding: 1rem;
+
+    &:hover,
+    &:focus {
+        background-color: var(--bg-secondary);
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow: var(--shadow-focus);
+    }
+}
+
+.heading {
+    font-size: 2.5rem;
+}
+
+.avatar {
+    width: 3rem;
+    height: 3rem;
+}
+
+.linkActive {
+    order: -1;
+    box-shadow: var(--shadow-focus);
+}
+
+.username {
+    font-weight: 600;
 }
