--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -18,16 +18,37 @@
 .header {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    justify-content: flex-start;
+    gap: 1.5rem;
     padding: 1rem;
     background-color: var(--bg-primary);
     width: var(--width);
     position: fixed;
-    top: 5rem;
+    top: 0;
+    border-bottom: var(--border-gray);
+    z-index: 1;
+
+    @include common.mediaquery('desktop') {
+        padding: 1rem 3rem;
+    }
 }
 
 .heading {
     font-size: 1rem;
+    max-width: 10rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    @include common.mediaquery('tablet') {
+        max-width: unset;
+    }
+}
+
+.userHeader {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .messages {
@@ -36,23 +57,55 @@
     align-items: flex-start;
     justify-content: flex-start;
     list-style: none;
-    padding: 10rem 2rem;
+    padding: 10rem 0.5rem;
     gap: 2rem;
+
+    @include common.mediaquery('desktop') {
+        padding: 10rem 2rem;
+    }
+}
+
+.loading {
+    margin-bottom: 10rem;
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-primary);
+
+    >svg {
+        width: 5rem;
+        height: 5rem;
+    }
+
+    animation: rotate 1s infinite linear forwards;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .form {
     display: flex;
     align-items: center;
-    padding: 0.5rem;
+    justify-content: space-between;
+    padding: 1rem;
     gap: 0.5rem;
     background-color: var(--bg-primary);
     position: fixed;
-
-    padding-bottom: 3.5rem;
+    border-top: var(--border-gray);
     bottom: 0;
     width: var(--width);
 
     @include common.mediaquery('desktop') {
+        justify-content: space-between;
         gap: 2rem;
         padding: 1rem 3rem;
     }
@@ -64,10 +117,15 @@
     border-radius: var(--radius-small);
     border: var(--border-gray);
     padding: 1rem 0.5rem;
+    max-width: 70%;
 
     &:focus {
         outline: none;
         box-shadow: var(--shadow-focus);
+    }
+
+    @include common.mediaquery('desktop') {
+        max-width: unset;
     }
 }
 
@@ -85,5 +143,10 @@
     &:focus {
         outline: none;
         box-shadow: var(--shadow-focus);
+    }
+
+    >svg {
+        width: 75%;
+        fill: rgb(255, 255, 255);
     }
 }
