--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -24,6 +24,8 @@
     width: var(--width);
     position: fixed;
     top: 5rem;
+    border-bottom: var(--border-gray);
+    z-index: 1;
 }
 
 .heading {
@@ -47,7 +49,7 @@
     gap: 0.5rem;
     background-color: var(--bg-primary);
     position: fixed;
-
+    border-top: var(--border-gray);
     padding-bottom: 3.5rem;
     bottom: 0;
     width: var(--width);
