fix: chat message form

--- a/components/atoms/chatMessage/chatMessage.module.scss
+++ b/components/atoms/chatMessage/chatMessage.module.scss
@@ -6,6 +6,7 @@
     margin-left: auto;
     color: rgb(30, 30, 30);
     position: relative;
+    word-break: break-all;
 
     &>button {
         order: 2;
