--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -38,21 +38,25 @@
     align-items: flex-start;
     justify-content: flex-start;
     list-style: none;
-    padding: 10rem 2rem;
+    padding: 10rem 0.5rem;
     gap: 2rem;
+
+    @include common.mediaquery('desktop') {
+        padding: 10rem 2rem;
+    }
 }
 
 .form {
     display: flex;
     align-items: center;
-    padding: 0.5rem;
+    padding: 1rem;
     gap: 0.5rem;
     background-color: var(--bg-primary);
     position: fixed;
     border-top: var(--border-gray);
-    padding-bottom: 3.5rem;
     bottom: 0;
     width: var(--width);
+
 
     @include common.mediaquery('desktop') {
         gap: 2rem;
