--- a/components/molecules/chatUsers/chatUsers.module.scss
+++ b/components/molecules/chatUsers/chatUsers.module.scss
@@ -7,6 +7,8 @@
     gap: 3rem;
     background-color: var(--bg-primary);
     width: var(--width);
+    overflow-y: hidden;
+    overflow-x: auto;
     position: fixed;
     top: 0;
     height: 5rem;
