fix: infinite scroll

--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -46,6 +46,14 @@
     }
 }
 
+.loading {
+    height: 13rem;
+    width: 100%;
+    margin-bottom: 6rem;
+    border-radius: var(--radius-big);
+    background-color: var(--color-gray);
+}
+
 .form {
     display: flex;
     align-items: center;
