--- a/components/molecules/chatUsers/chatUsers.module.scss
+++ b/components/molecules/chatUsers/chatUsers.module.scss
@@ -2,29 +2,32 @@
 
 .nav {
     display: flex;
-    align-items: center;
-    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
     gap: 3rem;
     background-color: var(--bg-primary);
     width: var(--width);
-    overflow-y: hidden;
-    overflow-x: auto;
+    overflow-y: auto;
     position: fixed;
     top: 0;
-    height: 5rem;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     z-index: 1;
+    height: 100%;
 }
 
 .link {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
     border-radius: var(--radius-small);
+    background-color: var(--bg-primary);
 }
 
 .linkActive {
+    order: -1;
     box-shadow: var(--shadow-focus);
 }
 
