--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -23,7 +23,7 @@
     background-color: var(--bg-primary);
     width: var(--width);
     position: fixed;
-    top: 5rem;
+    top: 0;
     border-bottom: var(--border-gray);
     z-index: 1;
 }
@@ -47,16 +47,36 @@
 }
 
 .loading {
-    height: 13rem;
+    margin-bottom: 10rem;
+    position: relative;
     width: 100%;
-    margin-bottom: 6rem;
-    border-radius: var(--radius-big);
-    background-color: var(--color-gray);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-primary);
+
+    >svg {
+        width: 5rem;
+        height: 5rem;
+    }
+
+    animation: rotate 1s infinite linear forwards;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .form {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 1rem;
     gap: 0.5rem;
     background-color: var(--bg-primary);
@@ -66,6 +86,7 @@
     width: var(--width);
 
     @include common.mediaquery('desktop') {
+        justify-content: space-between;
         gap: 2rem;
         padding: 1rem 3rem;
     }
@@ -77,10 +98,15 @@
     border-radius: var(--radius-small);
     border: var(--border-gray);
     padding: 1rem 0.5rem;
+    max-width: 70%;
 
     &:focus {
         outline: none;
         box-shadow: var(--shadow-focus);
+    }
+
+    @include common.mediaquery('desktop') {
+        max-width: unset;
     }
 }
 
@@ -98,5 +124,10 @@
     &:focus {
         outline: none;
         box-shadow: var(--shadow-focus);
+    }
+
+    >svg {
+        width: 75%;
+        fill: rgb(255, 255, 255);
     }
 }
