--- a/components/molecules/chatUsers/chatUsers.module.scss
+++ b/components/molecules/chatUsers/chatUsers.module.scss
@@ -14,6 +14,10 @@
     padding: 1rem 1.5rem;
     z-index: 1;
     height: 100%;
+
+    @include common.mediaquery('desktop') {
+        padding: 2rem 4rem;
+    }
 }
 
 .link {
@@ -22,8 +26,28 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    border-radius: var(--radius-small);
+    border-radius: var(--radius-medium);
     background-color: var(--bg-primary);
+    padding: 1rem;
+
+    &:hover,
+    &:focus {
+        background-color: var(--bg-secondary);
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow: var(--shadow-focus);
+    }
+}
+
+.heading {
+    font-size: 2.5rem;
+}
+
+.avatar {
+    width: 3rem;
+    height: 3rem;
 }
 
 .linkActive {
