--- a/components/molecules/chatUsers/chatUsers.module.scss
+++ b/components/molecules/chatUsers/chatUsers.module.scss
@@ -7,12 +7,10 @@
     flex-direction: column;
     gap: 3rem;
     background-color: var(--bg-primary);
-    width: var(--width);
     overflow-y: auto;
-    position: fixed;
-    top: 0;
     padding: 1rem 1.5rem;
     z-index: 1;
+    width: 100%;
     height: 100%;
 
     @include common.mediaquery('desktop') {
@@ -23,12 +21,13 @@
 .link {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 1rem;
     border-radius: var(--radius-medium);
     background-color: var(--bg-primary);
     padding: 1rem;
+    width: 100%;
 
     &:hover,
     &:focus {
@@ -39,10 +38,18 @@
         outline: none;
         box-shadow: var(--shadow-focus);
     }
+
+    @include common.mediaquery('desktop') {
+        width: auto;
+    }
 }
 
 .heading {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
+
+    @include common.mediaquery('desktop') {
+        font-size: 2.5rem;
+    }
 }
 
 .avatar {
