--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -10,6 +10,8 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
   text-transform: capitalize;
 
   &:hover,
