--- a/components/atoms/signInButton/signInButton.module.scss
+++ b/components/atoms/signInButton/signInButton.module.scss
@@ -1,15 +1,15 @@
 @use '/styles/common.scss';
 
 .button {
-  border-radius: var(--radius-medium);
-  padding: 0.3rem 0.7rem;
+  border-radius: var(--radius-small);
+  padding: 0.4rem 0.8rem;
   background-color: var(--color-primary);
   color: rgb(255, 255, 255);
   font-weight: 500;
   border: none;
   transition: box-shadow var(--transition);
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin-left: 3rem;
 
   &::first-letter {
@@ -25,8 +25,10 @@
     padding: 0.5rem 1rem;
     margin-left: 0.75rem;
     margin-top: 1.5rem;
+    font-size: 1.5rem;
     display: block;
     width: fit-content;
+    border-radius: var(--radius-medium);
   }
 
 }
