--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -33,6 +33,14 @@
     }
 }
 
+.goBack {
+    display: none;
+
+    @include common.mediaquery('tablet') {
+        display: initial;
+    }
+}
+
 .heading {
     font-size: 1rem;
     max-width: 10rem;
@@ -92,37 +100,41 @@
     }
 }
 
+.formContainer {
+    position: fixed;
+    bottom: 2.5rem;
+    width: 100%;
+    padding: 1rem 2rem;
+    background-color: var(--bg-primary);
+
+    @include common.mediaquery('desktop') {
+        bottom: 0;
+    }
+}
+
 .form {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
-    gap: 0.5rem;
-    background-color: var(--bg-primary);
-    position: fixed;
-    border-top: var(--border-gray);
-    bottom: 0;
+    gap: 1rem;
     width: var(--width);
+    border-radius: var(--radius-big);
+    padding: 0 1rem;
+    background-color: var(--bg-secondary);
+    border: none;
 
     @include common.mediaquery('desktop') {
         justify-content: space-between;
         gap: 2rem;
-        padding: 1rem 3rem;
     }
 }
 
 .input {
     flex-grow: 1;
-    background-color: var(--bg-primary);
-    border-radius: var(--radius-small);
     border: var(--border-gray);
+    background-color: transparent;
     padding: 1rem 0.5rem;
-    max-width: 70%;
-
-    &:focus {
-        outline: none;
-        box-shadow: var(--shadow-focus);
-    }
+    border: none;
 
     @include common.mediaquery('desktop') {
         max-width: unset;
@@ -130,23 +142,20 @@
 }
 
 .button {
-    background-color: var(--color-primary);
-    border-radius: 100%;
-    color: rgb(255, 255, 255);
-    padding: 0.5rem;
+    color: var(--text-black);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-
+    transition: opacity var(--transition);
 
     &:focus {
         outline: none;
         box-shadow: var(--shadow-focus);
     }
 
-    >svg {
-        width: 75%;
-        fill: rgb(255, 255, 255);
+    &:disabled {
+        opacity: 0.4;
     }
+
 }
