--- a/components/organisms/chatUsers/chatUsers.module.scss
+++ b/components/organisms/chatUsers/chatUsers.module.scss
@@ -1,11 +1,11 @@
 @use '/styles/common';
 
-.nav {
+.container {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1.5rem;
     background-color: var(--bg-primary);
     overflow-y: auto;
     padding: 1rem 1rem;
@@ -28,8 +28,9 @@
     gap: 1rem;
     border-radius: var(--radius-medium);
     background-color: var(--bg-primary);
-    padding: 1rem;
+    padding: 0.25rem 1rem;
     width: 100%;
+    transition: background-color var(--transition);
 
     &:hover,
     &:focus {
@@ -45,6 +46,13 @@
         width: auto;
         gap: 1rem;
     }
+}
+
+.list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .heading {
