fix: infinite account posts

--- a/components/atoms/newPostNotification/newPostNotification.module.scss
+++ b/components/atoms/newPostNotification/newPostNotification.module.scss
@@ -7,16 +7,18 @@
   margin: 0 auto;
   width: max-content;
   z-index: 3;
-  top: 3rem;
+  top: 1.5rem;
   border-radius: var(--radius-small);
   border: none;
   box-shadow: var(--shadow-secondary);
   background-color: var(--color-primary);
   color: rgb(255, 255, 255);
-  padding: 0.75rem 1rem;
+  padding: 0.5rem 0.7rem;
+  font-size: 1.25rem;
   text-transform: capitalize;
   display: flex;
   gap: 0.35rem;
   align-items: center;
   font-weight: 600;
+
 }
